--- a/OPERATION_FIRESTORM.yaml
+++ b/OPERATION_FIRESTORM.yaml
@@ -1,8 +1,8 @@
 ModificationType: Mod
 Name: Operation Firestorm
-ModificationVersion: Beta 0.2.1
-DownloadLink: https://onedrive.live.com/?authkey=%21AGB%2DjxrzrBqjPAM&cid=366DA03E336A090A&id=366DA03E336A090A%21179&parId=366DA03E336A090A%21155&o=OneUp
-UIImageSourceNameLink:
+ModificationVersion: Alpha 0.3.16
+DownloadLink: https://onedrive.live.com/?authkey=%21AGB%2DjxrzrBqjPAM&id=366DA03E336A090A%21155&cid=366DA03E336A090A
+UIImageSourceNameLink:https://faa4rg.db.files.1drv.com/y4pGdks5UeslsEQ-kWMrzmr5qi8fF7IsMj-ysDSF2wu05CvcVA0GYQH6TIH912VolxwR_6L1X06DjKmtT0UwbXPffauhhe9VHU3gjG2GC39RYOBJTeFwIc-G83p4VPEMBJuTlLxq-bX2fba7cIaZIPV_S0627PGq5X8NzX6yj-r8V7HWUJNVAcXKyfp7aQncm-v2iQhItft_36hLdZnM13yRHxY27IrVlAa8dJrPUOXc8A/OFS_GenlauncherBanner.png
 DiscordLink: https://discord.gg/7NsTfDD
 ModDBLink: https://www.moddb.com/mods/operation-firestorm
 DependenceName:
